--- a/Momon.Biju.Web/Views/Product/_ProductFilter.cshtml
+++ b/Momon.Biju.Web/Views/Product/_ProductFilter.cshtml
@@ -1,4 +1,4 @@
-@model ProductFilter
+@model ProductFilterDto
 
 @using (Html.BeginForm("Filter", "Product", FormMethod.Get, new { id = "filter-form" }))
 {
