--- a/Momon.Biju.Web/Views/Product/Index.cshtml
+++ b/Momon.Biju.Web/Views/Product/Index.cshtml
@@ -7,12 +7,12 @@
 
 <div class="row">
     <div class="col-md-3">
-        @await Html.PartialAsync("_ProductFilter", Model.Filters)
+        @await Html.PartialAsync("_ProductFilter", Model.FiltersDto)
     </div>
 
     <div class="col-md-9">
         <div class="d-flex justify-content-between align-items-center mb-3">
-            <a href="@Url.Action("NewProduct", "Product")" class="btn btn-success">
+            <a href="@Url.Action("CreateProduct", "Product")" class="btn btn-success">
                 <i class="bi bi-plus-lg"></i> Create Product
             </a>
             <div>
