--- a/Momon.Biju.Web/Views/Product/CreateProduct.cshtml
+++ b/Momon.Biju.Web/Views/Product/CreateProduct.cshtml
@@ -17,22 +17,54 @@
         </div>
 
         <div class="mb-3">
+            @Html.LabelFor(m => m.Description)
+            @Html.TextAreaFor(m => m.Description, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Description)
+        </div>
+
+        <div class="mb-3">
             @Html.LabelFor(m => m.Price)
             @Html.TextBoxFor(m => m.Price, new { @class = "form-control", type = "number", step = "0.01" })
             @Html.ValidationMessageFor(m => m.Price)
         </div>
 
         <div class="mb-3">
-            @Html.LabelFor(m => m.SelectedCategoryId, "Category")
+            @Html.LabelFor(m => m.SelectedCategoryId)
             @Html.DropDownListFor(m => m.SelectedCategoryId, Model.Categories, "Select Category", new { @class = "form-control" })
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(m => m.SelectedSubCategoriesId, "Subcategories")
-            @Html.ListBoxFor(m => m.SelectedSubCategoriesId, Model.SubCategories, new { @class = "form-control", size = 6 })
+        <div class="form-group mb-3">
+            @Html.LabelFor(m => m.SelectedSubCategoriesId)
+            @Html.ListBoxFor(m => m.SelectedSubCategoriesId, new List<SelectListItem>(), new { @class = "form-control", size = 6, id = "SubCategories" })
         </div>
 
         <button type="submit" class="btn btn-primary">Save</button>
         <a href="@Url.Action("Index", "Product")" class="btn btn-secondary ms-2">Cancel</a>
     </div>
+}
+
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            $('#SelectedCategoryId').change(function () {
+                let categoryId = $(this).val();
+                
+                if (categoryId) {
+                    $.getJSON('@Url.Action("ListSubCategories", "Product")', { categoryId: categoryId }, function (data) {
+                        let $subCategories = $('#SubCategories');
+                        $subCategories.empty();
+                        
+                        $.each(data, function (i, item) {
+                            $subCategories.append($('<option>', {
+                                value: item.id,
+                                text: item.name
+                            }));
+                        });
+                    });
+                } else {
+                    $('#SubCategories').empty();
+                }
+            });
+        });
+    </script>
 }
