--- a/Momon.Biju.Web/Views/Shared/_Layout.cshtml
+++ b/Momon.Biju.Web/Views/Shared/_Layout.cshtml
@@ -16,22 +16,57 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm px-4">
         <div class="container-fluid">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Momon.Biju.Web</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                    </li>
-                </ul>
+            
+            <a class="navbar-brand fw-bold" href="#">Momon.Biju</a>
+
+            @* <div class="mx-auto"> *@
+            @*     <ul class="navbar-nav"> *@
+            @*         <li class="nav-item"> *@
+            @*             <a class="nav-link" href="/">Home</a> *@
+            @*         </li> *@
+            @*         <li class="nav-item"> *@
+            @*             <a class="nav-link" href="/Products">Products</a> *@
+            @*         </li> *@
+            @*     </ul> *@
+            @* </div> *@
+
+            <div class="d-flex">
+                @* @if (SignInManager.IsSignedIn(User)) *@
+                @if (true)
+                {
+                    // var user = await UserManager.GetUserAsync(User);
+                    <div class="dropdown">
+                        <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="userDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                            @* @user.UserName *@
+                            Momon
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+                            <li>
+                                <a asp-controller="Product" asp-action="Index" class="btn btn-success">
+                                    <i class="bi bi-plus-lg"></i>Produtos
+                                </a>
+                            </li>
+                            <li>
+                                <a asp-controller="Category" asp-action="Index" class="btn btn-success">
+                                    <i class="bi bi-plus-lg"></i>Categorias
+                                </a>
+                            </li>
+                            <li>
+                                <a asp-controller="SubCategory" asp-action="Index" class="btn btn-success">
+                                    <i class="bi bi-plus-lg"></i>Sub-Categorias
+                                </a>
+                            </li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li>
+                                <form method="post" asp-controller="Account" asp-action="Logout" class="px-3">
+                                    <button type="submit" class="btn btn-link dropdown-item">Logout</button>
+                                </form>
+                            </li>
+                        </ul>
+                    </div>
+                }
             </div>
         </div>
     </nav>
