--- a/Momon.Biju.Web/Views/Shared/_Layout.cshtml
+++ b/Momon.Biju.Web/Views/Shared/_Layout.cshtml
@@ -44,17 +44,17 @@
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
                             <li>
-                                <a asp-controller="Product" asp-action="Index" class="btn btn-success">
+                                <a asp-area="Admin" asp-controller="Product" asp-action="Index" class="btn btn-success">
                                     <i class="bi bi-plus-lg"></i>Produtos
                                 </a>
                             </li>
                             <li>
-                                <a asp-controller="Category" asp-action="Index" class="btn btn-success">
+                                <a asp-area="Admin" asp-controller="Category" asp-action="Index" class="btn btn-success">
                                     <i class="bi bi-plus-lg"></i>Categorias
                                 </a>
                             </li>
                             <li>
-                                <a asp-controller="SubCategory" asp-action="Index" class="btn btn-success">
+                                <a asp-area="Admin" asp-controller="SubCategory" asp-action="Index" class="btn btn-success">
                                     <i class="bi bi-plus-lg"></i>Sub-Categorias
                                 </a>
                             </li>
