--- a/Momon.Biju.Web/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Momon.Biju.Web/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Momon.Biju.Web
 @using Momon.Biju.Web.Areas.Admin.Models
+@using Momon.Biju.Web.Areas.Admin.Models.Products
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Momon.Biju.Web
