--- a/Momon.Biju.Web/Areas/Admin/Views/Product/_ProductCard.cshtml
+++ b/Momon.Biju.Web/Areas/Admin/Views/Product/_ProductCard.cshtml
@@ -16,7 +16,7 @@
 
         <!-- Buttons always at bottom -->
         <div class="mt-3 d-flex gap-2">
-            <a href="#" class="btn btn-sm btn-outline-primary w-100">
+            <a asp-area="Admin" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-sm btn-outline-primary w-100">
                 <i class="fa-solid fa-pen-to-square me-1"></i> Editar
             </a>
             <a href="#" class="btn btn-sm btn-primary w-100">
