filtering the products

--- a/Momon.Biju.Web/Areas/Admin/Views/Product/Index.cshtml
+++ b/Momon.Biju.Web/Areas/Admin/Views/Product/Index.cshtml
@@ -1,3 +1,5 @@
+@* @using Microsoft.AspNetCore.Mvc.TagHelpers *@
+@using X.PagedList.Mvc.Core
 @model ListProductViewModel
 
 @{
@@ -19,17 +21,39 @@
             <a asp-action="Create" class="btn btn-success">
                 <i class="bi bi-plus-lg"></i> Create Product
             </a>
-            <div>
-                Pagination...
+            <div class="d-flex justify-content-center mt-4">
+                @Html.PagedListPager(Model.Products, PageNumber => Url.Action("Index", new
+                    {
+                        PageNumber,
+                        Name = Model.Filter.Name,
+                        SelectedCategoryId = Model.Filter.SelectedCategoryId,
+                        SelectedSubCategoryId = Model.Filter.SelectedSubCategoryId
+                    }),
+                    new PagedListRenderOptions
+                    {
+                        DisplayLinkToFirstPage = PagedListDisplayMode.Always,
+                        DisplayLinkToLastPage = PagedListDisplayMode.Always,
+                        DisplayLinkToPreviousPage = PagedListDisplayMode.Always,
+                        DisplayLinkToNextPage = PagedListDisplayMode.Always,
+                        DisplayLinkToIndividualPages = true,
+                        MaximumPageNumbersToDisplay = 5,
+                        UlElementClasses = ["pagination"],
+                        LiElementClasses = ["page-item"],
+                        PageClasses = ["page-link"]
+                    }
+                )
             </div>
         </div>
         <hr/>
         <div id="product-list-container">
-            @await Html.PartialAsync("_ProductList", Model.Products)
+            <div class="row">
+                @foreach (var product in Model.Products)
+                {
+                    <div class="col-md-4 mb-4">
+                        @await Html.PartialAsync("_ProductCard", product)
+                    </div>
+                }
+            </div>
         </div>
     </div>
 </div>
-
-@section Scripts {
-    <script src="~/js/filter-products.js"></script>
-}
