--- a/Momon.Biju.Web/Areas/Admin/Views/Product/_ProductFilter.cshtml
+++ b/Momon.Biju.Web/Areas/Admin/Views/Product/_ProductFilter.cshtml
@@ -1,6 +1,6 @@
 @model FilterProductsInListDto
 
-<form id="filter-products-form" method="get" asp-area="Admin" asp-controller="Product" asp-action="Filter">
+<form id="filter-products-form" method="get" asp-area="Admin" asp-controller="Product" asp-action="Index">
 
     <input type="hidden" asp-for="PageSize" />
     
