--- a/Momon.Biju.Web/Areas/Admin/Views/Product/_ProductList.cshtml
+++ b/Momon.Biju.Web/Areas/Admin/Views/Product/_ProductList.cshtml
@@ -1,10 +1,10 @@
-@model IEnumerable<ProductInListDto>
-
-<div class="row">
-    @foreach (var product in Model)
-    {
-        <div class="col-md-4 mb-4">
-            @await Html.PartialAsync("_ProductCard", product)
-        </div>
-    }
-</div>
+@* @model IEnumerable<ProductInListDto> *@
+@* *@
+@* <div class="row"> *@
+@*     @foreach (var product in Model) *@
+@*     { *@
+@*         <div class="col-md-4 mb-4"> *@
+@*             @await Html.PartialAsync("_ProductCard", product) *@
+@*         </div> *@
+@*     } *@
+@* </div> *@
