--- a/Momon.Biju.Web/Views/Shared/_Layout.cshtml
+++ b/Momon.Biju.Web/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
                             </li>
                             <li><hr class="dropdown-divider"></li>
                             <li>
-                                <form method="post" asp-controller="Account" asp-action="Logout" class="px-3">
+                                <form method="post" asp-area="" asp-controller="Account" asp-action="Logout" class="px-3">
                                     <button type="submit" class="btn btn-link dropdown-item">Logout</button>
                                 </form>
                             </li>
