--- a/Momon.Biju.Web/Views/Account/Login.cshtml
+++ b/Momon.Biju.Web/Views/Account/Login.cshtml
@@ -6,17 +6,19 @@
 }
 
 <form asp-action="Login" method="post">
+    <input type="hidden" name="returnUrl" value="@ViewData["ReturnUrl"]" />
+    
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
     <div class="form-group">
         <label asp-for="Email"></label>
-        <input asp-for="Email" class="form-control" />
+        <input asp-for="Email" class="form-control"/>
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
 
     <div class="form-group">
         <label asp-for="Password"></label>
-        <input asp-for="Password" class="form-control" />
+        <input asp-for="Password" class="form-control"/>
         <span asp-validation-for="Password" class="text-danger"></span>
     </div>
 
