--- a/Momon.Biju.Web/Areas/Admin/Views/Product/_ProductCard.cshtml
+++ b/Momon.Biju.Web/Areas/Admin/Views/Product/_ProductCard.cshtml
@@ -1,4 +1,4 @@
-@model ProductInListDto
+@model Momon.Biju.Web.Dtos.Products.ProductInListDto
 
 <div class="card h-100 shadow-sm border-0 rounded-4 overflow-hidden product-card">
     <div class="position-relative">
