--- a/Momon.Biju.Web/Areas/Admin/Views/Product/_ProductFilter.cshtml
+++ b/Momon.Biju.Web/Areas/Admin/Views/Product/_ProductFilter.cshtml
@@ -1,4 +1,4 @@
-@model FilterProductsInListDto
+@model Momon.Biju.Web.Dtos.FilterProductsInListDto
 
 <form id="filter-products-form" method="get" asp-area="Admin" asp-controller="Product" asp-action="Index">
 
