--- a/Momon.Biju.Web/Views/Product/_ProductCard.cshtml
+++ b/Momon.Biju.Web/Views/Product/_ProductCard.cshtml
@@ -1,4 +1,5 @@
-@model ProductDto
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model Momon.Biju.Web.Dtos.Products.ProductInListDto
 
 <div class="card h-100 shadow-sm border-0 rounded-4 overflow-hidden product-card">
     <div class="position-relative">
@@ -16,8 +17,8 @@
 
         <!-- Buttons always at bottom -->
         <div class="mt-3 d-flex gap-2">
-            <a href="#" class="btn btn-sm btn-outline-primary w-100">
-                <i class="fa-solid fa-pen-to-square me-1"></i> Editar
+            <a onclick="addToCart('@Model.Id')" class="btn btn-sm btn-outline-primary w-100" tooltips="Adicionar ao carrinho">
+                <i class="fa fa-cart-plus me-1"></i>
             </a>
             <a href="#" class="btn btn-sm btn-primary w-100">
                 Detalhes
