--- a/Momon.Biju.Web/Areas/Cart/Views/Cart/Index.cshtml
+++ b/Momon.Biju.Web/Areas/Cart/Views/Cart/Index.cshtml
@@ -1,32 +1,32 @@
-@model List<Momon.Biju.Web.Areas.Cart.Models.CartItem>
+@using Momon.Biju.Web.Areas.Cart.Services
+@model Momon.Biju.Web.Areas.Cart.Models.CartViewModel
 
-<h2>Your Shopping Cart</h2>
-
-@if (!Model.Any())
-{
-    <p>Your cart is empty.</p>
+@{
+    ViewBag.Title = "Carrinho";
+    Layout = "_Layout";
 }
-else
-{
-    <table>
-        <thead>
-        <tr>
-            <th>Product</th>
-            <th>Quantity</th>
-            <th>Price</th>
-        </tr>
-        </thead>
-        <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>@item.ProductName</td>
-                <td>@item.Quantity</td>
-                <td>@item.Price.ToString("C")</td>
-            </tr>
-        }
-        </tbody>
-    </table>
 
-    <a asp-area="Cart" asp-controller="Cart" asp-action="Clear">Clear Cart</a>
-}
+<div class="container mt-4">
+    <h2 class="mb-4">Seu carrinho de compras</h2>
+
+    <div class="row">
+        <div class="col-md-8">
+            <div id="cartItemsContainer" class="table-responsive">
+                @await Html.PartialAsync("_CartItemsList", @Model.Items)
+            </div>
+            <a asp-area="" asp-controller="Product" asp-action="Index" class="btn btn-info">
+                Continuar a comprar
+            </a>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body d-flex flex-column justify-content-between p-3">
+                    <h5 class="card-title">Resumo da compra</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Informe seus dados para concluir a compra</h6>
+
+                    @await Component.InvokeAsync("FinishPurchase")
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
