--- a/Momon.Biju.Web/Views/Shared/Components/FilterProducts/Default.cshtml
+++ b/Momon.Biju.Web/Views/Shared/Components/FilterProducts/Default.cshtml
@@ -1,7 +1,7 @@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @model Momon.Biju.Web.Dtos.Products.FilterProductsInListDto
 
-<form id="filter-products-form" method="get" asp-controller="Product" asp-action="Index">
+<form method="get" asp-area="" asp-controller="Product" asp-action="Index">
 
     <div class="card p-3 mb-3">
         <h5>Filtrar Produtos</h5>
@@ -14,14 +14,14 @@
         <div class="mb-4">
             <label asp-for="SelectedCategoryId" class="form-label"></label>
             <select asp-for="SelectedCategoryId" asp-items="Model.Categories" class="form-select">
-                <option value="">Categoria</option>
+                <option value="">Todas</option>
             </select>
         </div>
 
         <div class="mb-4">
             <label asp-for="SelectedSubCategoryId" class="form-label"></label>
             <select asp-for="SelectedSubCategoryId" asp-items="Model.SubCategories" class="form-select">
-                <option value="">Subcategoria</option>
+                <option value="">Todas</option>
             </select>
         </div>
 
