--- a/Momon.Biju.Web/Views/Product/Index.cshtml
+++ b/Momon.Biju.Web/Views/Product/Index.cshtml
@@ -12,7 +12,7 @@
 
 <div class="row">
     <div class="col-md-3">
-        @await Html.PartialAsync("_ProductFilter", Model.Filter)
+        @await Component.InvokeAsync("FilterProducts")
     </div>
 
     <div class="col-md-9">
@@ -20,10 +20,7 @@
             <div class="d-flex justify-content-center mt-4">
                 @Html.PagedListPager(Model.Products, PageNumber => Url.Action("Index", new
                     {
-                        PageNumber,
-                        Name = Model.Filter.Name,
-                        SelectedCategoryId = Model.Filter.SelectedCategoryId,
-                        SelectedSubCategoryId = Model.Filter.SelectedSubCategoryId
+                        PageNumber
                     }),
                     new PagedListRenderOptions
                     {
@@ -53,3 +50,5 @@
         </div>
     </div>
 </div>
+
+
