--- a/Momon.Biju.Web/Views/Shared/_Layout.cshtml
+++ b/Momon.Biju.Web/Views/Shared/_Layout.cshtml
@@ -26,7 +26,9 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm px-4">
         <div class="container-fluid">
             
-            <a class="navbar-brand fw-bold" href="#">Momon.Biju</a>
+            <a asp-area="" asp-controller="Product" asp-action="Index" class="navbar-brand fw-bold">
+                Momon.Biju
+            </a>
 
             <div class="d-flex">
                 @if (User.Identity is { IsAuthenticated: true })
