--- a/Momon.Biju.Web/Areas/Cart/Views/Cart/_FinishPurchase.cshtml
+++ b/Momon.Biju.Web/Areas/Cart/Views/Cart/_FinishPurchase.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@model Momon.Biju.Web.Models.DetailsToPurchase
+@model Momon.Biju.Web.Areas.Cart.Models.DetailsToPurchase
 
 <form asp-action="Create" method="post" enctype="multipart/form-data">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
