--- a/Momon.Biju.Web/Views/Product/Index.cshtml
+++ b/Momon.Biju.Web/Views/Product/Index.cshtml
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="~/css/product.css" />
 }
 
-<div class="row mt-2">
+<div class="row">
     <div class="col-md-3 mt-3">
         <!-- Mobile (accordion, collapsed by default) -->
         <div class="d-md-none mb-3">
